

- corrected german lang file

--------------------------------------------------
v 1.3.0:
- a few seconds after starting the plugin will now print messages to the console when no games where registered
- gamebox.admin only gives access to admin commands (use gamebox.* for all permissions)
- strip color on invite input to be compatible with chat color plugins (e.g. https://dev.bukkit.org/projects/chatcolor-s)
- Fixed 'gamebox.gamegui.(*/gameID)' perm with shortcut commands
- Added API
--- give/set/take token with API
--- get Number of tokens with API
- fixed wrong calculation in '/gb takeToken' for offline players
- internal improvements and restructuring of settings (deprecated methods will be removed later and all games have to be updated)
- fixed a bug where GameBox thought that a player was in the main gui after using the 'back to game' button while playing a game
- permission 'gamebox.use' now prevents any usage of the command /gamebox and its aliases and also prevents usage of the hub item
- play permission fixed for multiplayer games
- option to allow accepting of game invitations WITHOUT having the permission to play said game
- improved lang_de.yml
- updated mandarin lang file 'lang_zh-cn.yml'


v 1.2.0:
- printing warning and additional info in console if no NMS found for version
- added missing message to lang_de
- added info messages to lang_en and lang_de
- permission gamebox.info is now a default permission
- list all installed games and give tha shortcut commands for them on /gb info
- added /gbadmin oder /gba
--- permission gamebox.admin needed!
- saving name for UUIDs in data for easier manual management
- admin commands
--- /gba givetoken/taketoken/settoken player count
--- works with offline and online players as long as the player has played on the server before!

v 1.1.2:
- add spanish lang file
- close inventory on damage event!

v 1.1.1:
- improved default lang messages (en)
- player now drop their old inventory contents on death


v 1.0.0: